--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,223 +1,287 @@
-body{
-    margin:0;
-    color:#6a6f8c;
-    font:600 16px/18px 'Open Sans',sans-serif;
+body {
+    margin: 0;
+    color: #6a6f8c;
+    font: 600 16px/18px 'Open Sans', sans-serif;
     background-image: url("../img/backkkk.jpg");
     background-size: contain;
     background-attachment: fixed;
 }
-*,:after,:before{box-sizing:border-box}
-.clearfix:after,.clearfix:before{content:'';display:table}
-.clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
 
-.login-wrap{
-    width:100%;
-    margin:auto;
-    max-width:525px;
-    min-height:670px;
-    position:relative;
-    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-}
-.login-html{
-    width:100%;
-    height:150%;
-    position:absolute;
-    padding:2px 70px 50px 70px;
-    background:rgba(40,57,101,.9);
-}
-.login-html .sign-in-htm,
-.login-html .sign-up-htm{
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    position:absolute;
-    transform:rotateY(180deg);
-    backface-visibility:hidden;
-    transition:all .4s linear;
-}
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check{
-    display:none;
-}
-.login-html .tab,
-.login-form .group .label,
-.login-form .group .button{
-    text-transform:uppercase;
-}
-.login-html .tab{
-    font-size:22px;
-    margin-right:15px;
-    padding-bottom:5px;
-    margin:0 15px 10px 0;
-    display:inline-block;
-    border-bottom:2px solid transparent;
-}
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab{
-    color:#fff;
-    border-color:#1161ee;
-}
-.login-form{
-    min-height:345px;
-    position:relative;
-    perspective:1000px;
-    transform-style:preserve-3d;
-}
-.login-form .group{
-    margin-bottom:15px;
-}
-.login-form .group .label,
-.login-form .group .input,
-.login-form .group .button{
-    width:100%;
-    color:#fff;
-    display:block;
-}
-.login-form .group .input,
-.login-form .group .button{
-    border:none;
-    padding:15px 20px;
-    border-radius:25px;
-    background:rgba(255,255,255,.1);
-}
-.login-form .group input[data-type="password"]{
-    text-security:circle;
-    -webkit-text-security:circle;
-}
-.login-form .group .label{
-    color:#aaa;
-    font-size:12px;
-}
-.login-form .group .button{
-    background:#1161ee;
-}
-.login-form .group label .icon{
-    width:15px;
-    height:15px;
-    border-radius:2px;
-    position:relative;
-    display:inline-block;
-    background:rgba(255,255,255,.1);
-}
-.login-form .group label .icon:before,
-.login-form .group label .icon:after{
-    content:'';
-    width:10px;
-    height:2px;
-    background:#fff;
-    position:absolute;
-    transition:all .2s ease-in-out 0s;
-}
-.login-form .group label .icon:before{
-    left:3px;
-    width:5px;
-    bottom:6px;
-    transform:scale(0) rotate(0);
-}
-.login-form .group label .icon:after{
-    top:6px;
-    right:0;
-    transform:scale(0) rotate(0);
-}
-.login-form .group .check:checked + label{
-    color:#fff;
-}
-.login-form .group .check:checked + label .icon{
-    background:#1161ee;
-}
-.login-form .group .check:checked + label .icon:before{
-    transform:scale(1) rotate(45deg);
-}
-.login-form .group .check:checked + label .icon:after{
-    transform:scale(1) rotate(-45deg);
-}
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
-    transform:rotate(0);
-}
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
-    transform:rotate(0);
+*, :after, :before {
+    box-sizing: border-box
 }
 
-.hr{
-    height:2px;
-    margin:60px 0 50px 0;
-    background:rgba(255,255,255,.2);
+.clearfix:after, .clearfix:before {
+    content: '';
+    display: table
 }
-.foot-lnk{
-    text-align:center;
+
+.clearfix:after {
+    clear: both;
+    display: block
 }
-.dropdown-item{
+
+a {
+    color: inherit;
+    text-decoration: none
+}
+
+.login-wrap {
+    width: 100%;
+    margin: auto;
+    max-width: 525px;
+    min-height: 670px;
+    position: relative;
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+}
+
+.login-html {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 2px 70px 50px 70px;
+    background: rgba(40, 57, 101, .9);
+}
+
+.login-html .sign-in-htm, .login-html .sign-up-htm {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    transition: all .4s linear;
+}
+
+.login-html .sign-in, .login-html .sign-up, .login-form .group .check {
+    display: none;
+}
+
+.login-html .tab, .login-form .group .label, .login-form .group .button {
+    text-transform: uppercase;
+}
+
+.login-html .tab {
+    font-size: 22px;
+    margin-right: 15px;
+    padding-bottom: 5px;
+    margin: 0 15px 10px 0;
+    display: inline-block;
+    border-bottom: 2px solid transparent;
+}
+
+.login-html .sign-in:checked+.tab, .login-html .sign-up:checked+.tab {
+    color: #fff;
+    border-color: #1161ee;
+}
+
+.login-form {
+    min-height: 345px;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+}
+
+.login-form .group {
+    margin-bottom: 15px;
+}
+
+.login-form .group .label, .login-form .group .input, .login-form .group .button {
+    width: 100%;
+    color: #fff;
+    display: block;
+}
+
+.login-form .group .input, .login-form .group .button {
+    border: none;
+    padding: 15px 20px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, .1);
+}
+
+.login-form .group input[data-type="password"] {
+    text-security: circle;
+    -webkit-text-security: circle;
+}
+
+.login-form .group .label {
+    color: #aaa;
+    font-size: 12px;
+}
+
+.login-form .group .button {
+    background: #1161ee;
+}
+
+.login-form .group label .icon {
+    width: 15px;
+    height: 15px;
+    border-radius: 2px;
+    position: relative;
+    display: inline-block;
+    background: rgba(255, 255, 255, .1);
+}
+
+.login-form .group label .icon:before, .login-form .group label .icon:after {
+    content: '';
+    width: 10px;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    transition: all .2s ease-in-out 0s;
+}
+
+.login-form .group label .icon:before {
+    left: 3px;
+    width: 5px;
+    bottom: 6px;
+    transform: scale(0) rotate(0);
+}
+
+.login-form .group label .icon:after {
+    top: 6px;
+    right: 0;
+    transform: scale(0) rotate(0);
+}
+
+.login-form .group .check:checked+label {
+    color: #fff;
+}
+
+.login-form .group .check:checked+label .icon {
+    background: #1161ee;
+}
+
+.login-form .group .check:checked+label .icon:before {
+    transform: scale(1) rotate(45deg);
+}
+
+.login-form .group .check:checked+label .icon:after {
+    transform: scale(1) rotate(-45deg);
+}
+
+.login-html .sign-in:checked+.tab+.sign-up+.tab+.login-form .sign-in-htm {
+    transform: rotate(0);
+}
+
+.login-html .sign-up:checked+.tab+.login-form .sign-up-htm {
+    transform: rotate(0);
+}
+
+.hr {
+    height: 2px;
+    margin: 60px 0 50px 0;
+    background: rgba(255, 255, 255, .2);
+}
+
+.foot-lnk {
+    text-align: center;
+}
+
+.dropdown-item {
     color: black;
 }
-img{
+
+img {
     height: 50px;
 }
 
-h1{
+h1 {
     color: black;
+    text-align: center;
+    margin-left: 130px;
+    display: inline-block;
 }
-#dropdownMenuLink{
+
+#dropdownMenuLink {
     margin-left: -10px;
     border: 0;
-    background-color: transparent ;
+    background-color: transparent;
 }
-.d-block{
-    margin-left: -10px;
 
+.d-block {
+    margin-left: -10px;
 }
-.mr-sm-2{
+
+.mr-sm-2 {
     width: 250px;
 }
-td{
+
+td {
     height: 70px;
     font-size: 28px;
     color: black;
-    /* border: solid black !important; */
     /* text-align: center; */
     /* vertical-align: middle;
     text-align: left; */
-
+    text-align: left;
+    vertical-align: middle;
+    border: solid black !important;
 }
-th{
+
+th {
     font-size: 25px;
     color: black;
     text-align: center;
     /* border: solid black !important; */
-    background-color: antiquewhite ;
+    background-color: antiquewhite;
+    border: solid black !important; 
+
 }
-tr{
-    /* border: solid black; */
+
+tr {
+    border: solid black;
 }
-label{
+
+label {
     color: black;
     font-size: 25px;
 }
-#remember{
+
+#remember {
     font-size: 100%;
 }
 
-#example1{
+#example1 {
     white-space: nowrap;
 }
-#car-body{
+
+#car-body {
     overflow: scroll;
+    height: 480px;
 }
-#detail{
+.card-title{
+    color: #000;
+}
+/* 
+#detail {
     text-align: left;
     vertical-align: middle;
+    border: solid black;
+
 }
-#username{
+
+#username {
     text-align: left;
     vertical-align: middle;
+    border: solid black;
+
 }
-#start_date{
+
+#start_date {
     text-align: left;
     vertical-align: middle;
+    border: solid black;
+
 }
-#end_date{
+
+#end_date {
     text-align: left;
     vertical-align: middle;
+    border: solid black;
+
 }
+#action{
+    border: solid black;
+} */
