--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ a {
 
 .login-html {
     width: 100%;
-    height: 100%;
+    height: 120%;
     position: absolute;
     padding: 2px 70px 50px 70px;
     background: rgba(40, 57, 101, .9);
@@ -254,21 +254,13 @@ label {
 .card-title{
     color: #000;
 }
-/* 
-#detail {
+/* #detail {
     text-align: left;
     vertical-align: middle;
-    border: solid black;
 
-}
+}  */
 
-#username {
-    text-align: left;
-    vertical-align: middle;
-    border: solid black;
-
-}
-
+/*
 #start_date {
     text-align: left;
     vertical-align: middle;
@@ -284,4 +276,10 @@ label {
 }
 #action{
     border: solid black;
-} */
+}  */
+#user_name {
+    text-align: left;
+    vertical-align: middle;
+    border: solid black;
+
+}
