--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,6 +260,10 @@ label {
     width: 100% !important;
     height: 100% !important;
 }
+.row{
+    width: 100% !important;
+    height: 100% !important;
+}
 .profile{
     border: 0 !important;
 }
