--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,7 +206,7 @@ h1 {
     width: 250px;
 }
 
-td {
+ td {
     height: 70px;
     font-size: 20px;
     color: black;
@@ -238,9 +238,9 @@ label {
     font-size: 100%;
 }
 
-#example1 {
-    white-space: nowrap;
-}
+ #example1 {
+    white-space: nowrap !important;
+} 
 
 #car-body {
     overflow: scroll;
@@ -251,15 +251,13 @@ label {
 .content-wrapper{
     display: flex !important;
 }
-.content{
+ .content{
     width: 100% !important;
 
-}
+}  
 .card{
     width: 100% !important;
     height: 100% !important;
-
-    
 }
 .row{
     width: 100% !important;
@@ -270,5 +268,5 @@ label {
 }
 .table-user-information > tbody > tr {
     border-top: 1px solid rgb(221, 221, 221) !important;
-}
+} 
 
