--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,9 +238,9 @@ label {
     font-size: 100%;
 }
 
- #example1 {
+ /* #example1 {
     white-space: nowrap !important;
-} 
+}  */
 
 #car-body {
     overflow: scroll;
