--- a/public/css/style.css
+++ b/public/css/style.css
@@ -269,4 +269,6 @@ label {
 .table-user-information > tbody > tr {
     border-top: 1px solid rgb(221, 221, 221) !important;
 } 
-
+.check-time{
+background-color: orange;
+}
