update chuc nang an cong viec

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     color: #6a6f8c;
     font: 600 16px/18px 'Open Sans', sans-serif;
-    /* background-image: url("../img/backkkk.jpg"); */
     background-size: contain;
     background-attachment: fixed;
 }
@@ -176,9 +175,7 @@ img {
     margin-left: -10px;
 }
 
-.mr-sm-2 {
-    width: 250px;
-}
+
 
 td {
     height: 50px;
@@ -258,4 +255,7 @@ label {
 }
 .out-time{
     background-color: red;
+}
+.detail{
+    width: 400px;
 }
