them chuc nang cap nhat anh dai dien va hien thi anh ra ngoai

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,8 @@ th {
     text-align: center !important;
     background-color: antiquewhite;
     border: solid black !important;
+    vertical-align: middle !important;
+    
 }
 
 tr {
